[package]
name = "twilio_rust"
version = "0.1.0"
edition = "2021"
authors = ["Holger Trahe<trahe@mac.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
stripe = ["reqwest"]

[dependencies]
actix-web = "4"         # Web framework
serde = { version = "1.0", features = ["derive"] } # For serializing/deserializing data (query params, JSON)
serde_json = "1.0"      # For JSON handling
jsonwebtoken = "8"      # For creating and signing JWTs
chrono = { version = "0.4", features = ["serde"] } # For handling timestamps (token expiration)
dotenv = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"], optional=true}
# To load environment variables from a .env file during development (optional)
actix-governor = "0.8"
hmac = "0.12"           # Needed for JWT signing algorithm
sha2 = "0.10"
once_cell = "1.21.3"           # Needed for JWT signing algorithm (SHA256)

#[profile.release]
#panic = "abort"
